force-app/main/default/objects/leaseworks__Aircraft_Deal_Activity__c/leaseworks__Aircraft_Deal_Activity__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Z_Unused_NotDeletableAircraftDealRelNote</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletableAircraftDealRelNote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>