force-app/main/default/objects/leaseworks__Aircraft_Deal_Activity__c/fields/leaseworks__Deal_Proposal_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deal_Proposal_Comments__c</fullName>
    <label>Z_Unsed Deal Proposal Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>