force-app/main/default/objects/leaseworks__Aircraft_Deal_Activity__c/fields/leaseworks__Marketing_Activity_Note__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused Deal Note</label>
    <referenceTo>leaseworks__Marketing_Activity_Note__c</referenceTo>
    <relationshipName>Aircraft_Deal_Related_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>