force-app/main/default/objects/leaseworks__Aircraft_Deal_Activity__c/fields/leaseworks__Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Meeting_Date__c</fullName>
    <formula>leaseworks__Deal_Proposal_Activity__r.leaseworks__Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>